--- a/index.html
+++ b/index.html
@@ -3,9 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="index.css">
+    <link rel="contact" href="contact.html">
+    <link rel="about" href="about.html">
+    <link rel="projects" href="projects.html">
+    <title>Michael Brister</title>
 </head>
 <body>
-    
+    <header>
+        <div class="name">
+            <h1>Michael Brister</h1>
+        </div>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="contact.html">Contact</a>
+            <a href="projects.html">Projects</a>
+        </nav>
+    </header>
+    <section class="aboutMe">
+        <div class="logo">
+            <img src="https://picsum.photos/">
+        </div>
+        <div class="text">
+            <div class="textContainer">
+                <h2>Michael Brister</h2>
+                <p><a href="projects.html">My Projects</a></p>
+                <p>Growing up in the digital age, I've always been interested in technology and the science behind all of the things we use everyday. I'm very fascinated by how an understanding of code can open up endless possibilities of creativity. I'm hoping that by better understanding how to code I will be able to help bring new ideas to life.</p>
+            </div>
+        </div>
+    </section>
+    <section class="listOfProjects">
+        <div class="projectOne">
+            <img src="https://picsum.photos/">
+            <h3>Project One</h3>
+        </div>
+        <div class="projectTwo">
+            <img src="https://picsum.photos/">
+            <h3>Project Two</h3>
+        </div>
+        <div class="projectThree">
+            <img src="https://picsum.photos/">
+            <h3>Project Three</h3>
+        </div>
+        <div class="projectFour">
+            <img src="https://picsum.photos/">
+            <h3>Project Four</h3>
+        </div>
+        <div class="projectFive">
+            <img src="https://picsum.photos/">
+            <h3>Project Five</h3>
+        </div>
+        <div class="projectSix">
+            <img src="https://picsum.photos/">
+            <h3>Project Six</h3>
+        </div>
+        <div class="projectSeven">
+            <img src="https://picsum.photos/">
+            <h3>Project Seven</h3>
+        </div>
+        <div class="projectEight">
+            <img src="https://picsum.photos/">
+            <h3>Project Eight</h3>
+        </div>
+    </section>
+    <footer>
+        <div class="footerText">
+            <h2>Like What You See?</h2>
+            <p><a href="contact.html">Contact Me</a></p>
+        </div>
+    </footer>  
 </body>
 </html>
