--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <section class="aboutMe">
         <div class="logo">
-            <img src="https://picsum.photos/">
+            <img src="https://picsum.photos/500/350">
         </div>
         <div class="text">
             <div class="textContainer">
@@ -35,35 +35,35 @@
     </section>
     <section class="listOfProjects">
         <div class="projectOne">
-            <img src="https://picsum.photos/">
+            <img src="https://picsum.photos/200">
             <h3>Project One</h3>
         </div>
         <div class="projectTwo">
-            <img src="https://picsum.photos/">
+            <img src="https://picsum.photos/200">
             <h3>Project Two</h3>
         </div>
         <div class="projectThree">
-            <img src="https://picsum.photos/">
+            <img src="https://picsum.photos/200">
             <h3>Project Three</h3>
         </div>
         <div class="projectFour">
-            <img src="https://picsum.photos/">
+            <img src="https://picsum.photos/200">
             <h3>Project Four</h3>
         </div>
         <div class="projectFive">
-            <img src="https://picsum.photos/">
+            <img src="https://picsum.photos/200">
             <h3>Project Five</h3>
         </div>
         <div class="projectSix">
-            <img src="https://picsum.photos/">
+            <img src="https://picsum.photos/200">
             <h3>Project Six</h3>
         </div>
         <div class="projectSeven">
-            <img src="https://picsum.photos/">
+            <img src="https://picsum.photos/200">
             <h3>Project Seven</h3>
         </div>
         <div class="projectEight">
-            <img src="https://picsum.photos/">
+            <img src="https://picsum.photos/200">
             <h3>Project Eight</h3>
         </div>
     </section>
