--- a/index.html
+++ b/index.html
@@ -23,47 +23,45 @@
     </header>
     <section class="aboutMe">
         <div class="logo">
-            <img src="https://picsum.photos/500/350">
+            <img src="https://picsum.photos/800/500">
         </div>
-        <div class="text">
-            <div class="textContainer">
-                <h2>Michael Brister</h2>
-                <p><a href="projects.html">My Projects</a></p>
-                <p>Growing up in the digital age, I've always been interested in technology and the science behind all of the things we use everyday. I'm very fascinated by how an understanding of code can open up endless possibilities of creativity. I'm hoping that by better understanding how to code I will be able to help bring new ideas to life.</p>
-            </div>
-        </div>
+        <section class="textContainer">
+            <h2>Michael Brister</h2>
+            <p><a href="projects.html">My Projects</a></p>
+            <p>Growing up in the digital age, I've always been interested in technology and the science behind all of the things we use everyday. I'm very fascinated by how an understanding of code can open up endless possibilities of creativity. I'm hoping that by better understanding how to code I will be able to help bring new ideas to life.</p>
+        </section>
     </section>
     <section class="listOfProjects">
-        <div class="projectOne">
-            <img src="https://picsum.photos/200">
+        <div>
+            <img src="https://picsum.photos/300">
             <h3>Project One</h3>
         </div>
-        <div class="projectTwo">
-            <img src="https://picsum.photos/200">
+        <div>
+            <img src="https://picsum.photos/300">
             <h3>Project Two</h3>
         </div>
-        <div class="projectThree">
-            <img src="https://picsum.photos/200">
+        <div>
+            <img src="https://picsum.photos/300">
             <h3>Project Three</h3>
         </div>
-        <div class="projectFour">
-            <img src="https://picsum.photos/200">
+        <div>
+            <img src="https://picsum.photos/300">
             <h3>Project Four</h3>
         </div>
-        <div class="projectFive">
-            <img src="https://picsum.photos/200">
+        <div>
+            <img src="https://picsum.photos/300">
             <h3>Project Five</h3>
         </div>
-        <div class="projectSix">
-            <img src="https://picsum.photos/200">
+        <div>
+            <img src="https://picsum.photos/300">
             <h3>Project Six</h3>
         </div>
-        <div class="projectSeven">
-            <img src="https://picsum.photos/200">
+        <div>
+            <img src="https://picsum.photos/300">
             <h3>Project Seven</h3>
         </div>
-        <div class="projectEight">
-            <img src="https://picsum.photos/200">
+        <div>
+            <img src="https://picsum.photos/300">
             <h3>Project Eight</h3>
         </div>
     </section>
