Finalized styling and double checked code

--- a/index.html
+++ b/index.html
@@ -37,31 +37,31 @@
             <h3>Project One</h3>
         </div>
         <div>
-            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/301/300">
             <h3>Project Two</h3>
         </div>
         <div>
-            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/299/300">
             <h3>Project Three</h3>
         </div>
         <div>
-            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/302/300">
             <h3>Project Four</h3>
         </div>
         <div>
-            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/298/300">
             <h3>Project Five</h3>
         </div>
         <div>
-            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/303/300">
             <h3>Project Six</h3>
         </div>
         <div>
-            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/297/300">
             <h3>Project Seven</h3>
         </div>
         <div>
-            <img src="https://picsum.photos/300">
+            <img src="https://picsum.photos/304/300">
             <h3>Project Eight</h3>
         </div>
     </section>
